<resources>
    <string name="app_name">SyncTextFirebase</string>

    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_open">Open</string>
    <string name="action_transfer">Transfer</string>

    <string name="title_activity_edition">EditionActivity</string>

    <string name="user_name">User Name</string>
    <string name="type_text">Type your text here</string>
    <string name="button_connect">Connect to Firebase</string>
    <string name="button_offline">Start offline</string>
    <string name="file_name">new file name</string>
</resources>
